# Symmetric-key-example

./: .gitignore  CMakeLists.txt  LICENSE  README.md  cmake-build.ps1  cmake-build.sh  coding-exercise.md
src/Decoder/: decode-driver.cpp  decoder.cpp  decoder.h  main.cpp
src/Encoder/: encoder.cpp  encoder.h  main.cpp
